After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770933 - srtpenc: deadlock in create_session
srtpenc: deadlock in create_session
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-06 08:40 UTC by Philippe Normand
Modified: 2016-09-30 07:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
srtpenc: prevent deadlock in create_session (1.42 KB, patch)
2016-09-06 09:08 UTC, Philippe Normand
committed Details | Review

Description Philippe Normand 2016-09-06 08:40:33 UTC
gst_srtp_enc_create_session() is called with the object lock taken but in some cases this function emits an error message, so the lock needs to be temporarily released.
Comment 1 Philippe Normand 2016-09-06 09:08:46 UTC
Created attachment 334884 [details] [review]
srtpenc: prevent deadlock in create_session

Temporarily release the object lock which is needed to post error
messages on the bus.
Comment 2 Philippe Normand 2016-09-06 11:03:31 UTC
Thanks! Pushed as 7fa2668adf377b1909907a22e3f27a479c4ddafa
Comment 3 Philippe Normand 2016-09-06 11:04:56 UTC
Review of attachment 334884 [details] [review]:

Pushed!