srtpenc: prevent deadlock in create_session

Temporarily release the object lock which is needed to post error
messages on the bus.

https://bugzilla.gnome.org/show_bug.cgi?id=770933